// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase C — settings panel (summary) > renders panel rows after a switch to xai 1`] = `
[
  " 1   providers            no keys stored",
  " 2   task routing         all xai",
  " 3   ide integrations     6 configured",
  " 4   multi-machine sync   /Volumes/Dev/gnosys",
  " 5   dream mode           disabled",
  " 6   user preferences     0 stored",
]
`;

exports[`Phase C — settings panel (summary) > renders panel rows for a fresh anthropic config 1`] = `
[
  " 1   providers            no keys stored",
  " 2   task routing         all anthropic",
  " 3   ide integrations     6 configured",
  " 4   multi-machine sync   /Volumes/Dev/gnosys",
  " 5   dream mode           disabled",
  " 6   user preferences     0 stored",
]
`;
